# codeql-jupyter-kernel

./: .gitignore  Makefile  README.md  build_treesitter.py  pyproject.toml
codeql_kernel/: __init__.py  __main__.py  codeql.py  jsonrpc.py  kernel.py  rawrpc.py
codeql_kernel/magics/: set_database_magic.py
example/: test.ipynb
example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
example/codeql-db/: baseline-info.json  codeql-database.yml
example/codeql-db/db-python/default/: containerparent.rel  containerparent.rel.checksum  ext_argreturn.rel  ext_argreturn.rel.checksum  ext_argtype.rel  ext_argtype.rel.checksum  ext_proptype.rel  ext_proptype.rel.checksum  ext_rettype.rel  ext_rettype.rel.checksum  files.rel  files.rel.checksum  folders.rel  folders.rel.checksum  locations_ast.rel.checksum  numlines.rel  numlines.rel.checksum  py_Classes.rel  py_Classes.rel.checksum  py_Functions.rel  py_Functions.rel.checksum  py_Modules.rel  py_Modules.rel.checksum  py_StringPart_lists.rel  py_StringPart_lists.rel.checksum  py_StringParts.rel  py_StringParts.rel.checksum  py_alias_lists.rel  py_alias_lists.rel.checksum  py_aliases.rel  py_aliases.rel.checksum  py_alllines.rel  py_alllines.rel.checksum  py_arguments.rel  py_arguments.rel.checksum  py_boolops.rel  py_boolops.rel.checksum  py_bools.rel  py_bools.rel.checksum  py_citems.rel  (+92 more)
example/src/: main.py
jupyterlab-codeql-highlight/: package-lock.json  package.json
jupyterlab-codeql-highlight/jupyterlab-codeql-highlight/: __init__.py
jupyterlab-codeql-highlight/lib/: codeql.js  plugin.js
tests/: context.py  qlpack.yml  query.ql  test.bqrs  test_cliclient.py  test_kernel.py  test_queryclient.py
tests/codeql_db/: codeql-database.yml
tests/codeql_db/db-python/default/: containerparent.rel  containerparent.rel.checksum  ext_argreturn.rel  (+71 more)
(+736 files in other folders)
