[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[project]
name = "codeql_kernel"
description = "A Jupyter kernel for CodeQL"
license = {file = "LICENSE.txt"}
authors = [{name = "'Alvaro Munoz'", email = "pwntester@github.com"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
]
urls = {Homepage = "http://github.com/GitHubSecurityLab/codeql_kernel"}
requires-python = ">=3.7"
dependencies = [
    "metakernel >=0.24.0",
    "jupyter_client >=4.3.0",
    "pandas",
    "tree_sitter",
    "ipykernel",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest", "nbconvert", "jupyter_kernel_test", "nbconvert"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-data/share" = "share"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter-data"]
include = [
    "/jupyter-data",
    "/codeql_kernel",
    "/*.md"
]

[tool.hatch.version]
path = "codeql_kernel/_version.py"
source = "code"

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
after-prep-git = ["make data-files"]

[tool.tbump.version]
current = "0.0.1"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "codeql_kernel/_version.py"
